src/Tests/Error/TypeObjectError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeObjectError extends AssertError
{
}
